tests/behavior/error/null_pointer_arithmetic6.bz
function main()
{
	let p: ?*int32 = null;
	p - 1;
}
